# databridge_playground

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-databridge_playground  bazel-out  bazel-testlogs  person.proto
.github/workflows/: ci.yaml
host/: BUILD.bazel  main.cc
plugin/: BUILD.bazel  api.h  fake_plugin.cc  fake_plugin.h
proto/: BUILD.bazel  demo.proto
record_tool/: BUILD.bazel  record_mcap.cc
recorder/: BUILD.bazel  recorder.cc  recorder.h
tests/: BUILD.bazel  fake_plugin_test.cc
