module(
    name = "plugin_system",
    version = "1.0.0",
)

bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "googletest", version = "1.14.0")
#bazel_dep(name = "mcap", version = "1.4.0")
#bazel_dep(name = "mcap", version = "1.4.0", repo_name = "com_foxglove_mcap")
